# AuraIO

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md
api/snapshots/: c_api.txt  cpp_api.txt  prometheus_metrics.txt  rust_api.txt
bindings/rust/: Cargo.toml
bindings/rust/aura/: Cargo.toml
bindings/rust/aura-sys/: Cargo.toml  build.rs
bindings/rust/aura-sys/src/: lib.rs
bindings/rust/aura/src/: async_io.rs  buffer.rs  callback.rs  engine.rs  error.rs  lib.rs  log.rs  options.rs  request.rs  stats.rs
bindings/rust/auraio/: Cargo.toml
bindings/rust/auraio-sys/: Cargo.toml  build.rs
bindings/rust/auraio-sys/src/: lib.rs
bindings/rust/auraio/src/: async_io.rs  buffer.rs  callback.rs  engine.rs  lib.rs  log.rs  options.rs  request.rs  stats.rs
build-tools/: format-rust-tests.sh
build-tools/coverage/: run_llvm_cov.sh
cmake/: auraConfig.cmake.in
core/include/: auraio.h
core/include/auraio/: buffer.hpp  engine.hpp  options.hpp  stats.hpp
core/src/: adaptive_buffer.c  adaptive_buffer.h  adaptive_engine.h  adaptive_ring.h  log.c  log.h
coverage/: coverage.profdata  lcov.info  line_coverage.txt  report.txt  summary.json
coverage/html/: index.html
coverage/html/coverage/Users/par/Documents/src/AuraIO/include/: auraio.h.html
coverage/html/coverage/Users/par/Documents/src/AuraIO/src/: adaptive_buffer.c.html  adaptive_buffer.h.html  adaptive_engine.c.html  adaptive_engine.h.html  adaptive_ring.c.html  adaptive_ring.h.html  auraio.c.html  internal.h.html  log.c.html
coverage/profraw/: test_buffer-195828.profraw  test_concurrency_stress-195971.profraw  test_coverage-196002.profraw  test_engine-195822.profraw  test_otel-195977.profraw  test_ring-195849.profraw  test_ring_select-195916.profraw  test_stats-195897.profraw
docs/: API-Quickstart.md  ASYNC_LIFECYCLE.md  BFFIO.md  CODEBASE_MAP.md  COMPATIBILITY_POLICY.md  OBSERVABILITY_CONTRACT.md  SSPA.md  api-reference.md  api_reference.md  architecture.md  async-lifecycle.md  aura-check.md  aura-hash.md  bffio.md  observability.md  performance.md  sspa.md
docs/rfcs/: README.md
engine/include/: aura.h  aura.hpp  auraio.h  auraio.hpp
engine/include/aura/: buffer.hpp  coro.hpp  engine.hpp  error.hpp  fwd.hpp  log.hpp  options.hpp  request.hpp  stats.hpp
engine/include/aura/detail/: callback_storage.hpp
engine/include/auraio/: coro.hpp  engine.hpp  fwd.hpp  log.hpp  request.hpp
engine/pkg/: libaura.pc.in
engine/src/: adaptive_buffer.c  adaptive_buffer.h  adaptive_engine.c  adaptive_engine.h  adaptive_ring.c  adaptive_ring.h  aura.c  auraio.c  internal.h  log.c  log.h
examples/: Makefile  README.md
examples/C/: Makefile  bulk_reader.c  cancel_request.c  custom_config.c  file_copy.c  log_handler.c  quickstart.c  registered_buffers.c  simple_read.c  vectored_io.c  write_modes.c
examples/cpp/: Makefile  bulk_reader.cpp  cancel_request.cpp  coroutine_copy.cpp  custom_config.cpp  log_handler.cpp  quickstart.cpp  registered_buffers.cpp  simple_read.cpp  vectored_io.cpp  write_modes.cpp
examples/rust/: Cargo.toml
examples/rust/examples/: async_copy.rs  bulk_reader.rs  cancel_request.rs  custom_config.rs  file_copy.rs  log_handler.rs  quickstart.rs  registered_buffers.rs  simple_read.rs  vectored_io.rs  write_modes.rs
exporters/otel/: auraio_otel.h  auraio_otel_push.c
exporters/prometheus/: auraio_prometheus.c  auraio_prometheus.h  example.c
include/: auraio.h  auraio.hpp
include/auraio/: buffer.hpp  coro.hpp  engine.hpp  error.hpp  fwd.hpp  options.hpp  request.hpp  stats.hpp
include/auraio/detail/: callback_storage.hpp
integrations/opentelemetry/C/: aura_otel.c  aura_otel.h  aura_otel_push.c  aura_otel_push.h  auraio_otel.c  auraio_otel_push.c  auraio_otel_push.h  example.c
integrations/opentelemetry/cpp/: README.md
integrations/opentelemetry/rust/: README.md
integrations/prometheus/C/: aura_prometheus.c  aura_prometheus.h  auraio_prometheus.c  auraio_prometheus.h  example.c
integrations/prometheus/cpp/: README.md
integrations/prometheus/rust/: README.md
integrations/syslog/C/: aura_syslog.c  aura_syslog.h  auraio_syslog.c  auraio_syslog.h  example.c
investigations/: bffio-performance-gap.md
pkg/: libauraio.pc.in
src/: adaptive_buffer.c  adaptive_buffer.h  adaptive_engine.c  adaptive_engine.h  adaptive_ring.c  adaptive_ring.h  auraio.c  internal.h  log.c  log.h
tests/: Makefile  adaptive_value.c  bench_buffer  bench_buffer.c  bench_histogram.c  perf_bench.c  perf_regression.c  repro_race.c  run_analysis.sh  run_deep_analysis.sh  run_perf_test.sh  stress_test.cpp  test_buffer.c  test_concurrency_stress.c  test_coverage.c  test_cpp  test_cpp.cpp  test_engine.c  test_histogram.c  test_linked_ops.c  test_metadata_ops.c  test_otel.c  test_request_fd_fix.c  test_ring.c  test_ring_select.c  test_spill_stress.c  test_stats.c
tools/BFFIO/: Makefile  README.md  USAGE.md  job_parser.c  job_parser.h  main.c  output.c  output.h  run_baseline.sh  stats.c  stats.h  test_BFFIO.sh  workload.c  workload.h
tools/api_surface/: check_rfc_for_snapshot_change.sh  generate.sh
tools/atree/: Makefile  atree.c
tools/aura-check/: Makefile  aura-check.c
tools/aura-hash/: Makefile  aura-hash.c
tools/auracp/: Makefile  auracp.c
tools/auracp_cpp/: Makefile  auracp.cpp
tools/coverage/: run_llvm_cov.sh
tools/sspa/: Makefile  sspa.c
