[package]
name = "aura-sys"
version = "0.4.0"
edition = "2021"
description = "Raw FFI bindings for AuraIO async I/O library"
license = "Apache-2.0"
keywords = ["io_uring", "async", "ffi"]
categories = ["external-ffi-bindings", "asynchronous"]

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"

[features]
default = []
# Use bundled headers instead of system-installed
bundled = []
