[package]
name = "aura"
version = "0.4.0"
edition = "2021"
description = "Safe Rust bindings for AuraIO - self-tuning async I/O library"
license = "Apache-2.0"
keywords = ["io_uring", "async", "io", "performance"]
repository = "https://github.com/Par-B/AuraIO"
readme = "README.md"
categories = ["asynchronous", "filesystem"]

[dependencies]
aura-sys = { path = "../aura-sys" }
libc = "0.2"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[features]
default = []
# Enable async/await support (runtime-agnostic)
async = []
