[package]
name = "auraio-sys"
version = "1.0.1"
edition = "2021"
description = "Raw FFI bindings for AuraIO async I/O library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/auraio"
keywords = ["io_uring", "async", "ffi"]
categories = ["external-ffi-bindings", "asynchronous"]

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"

[features]
default = []
# Use bundled headers instead of system-installed
bundled = []
